src/features/system/layout/components/header/navigation/SystemNavigationContainer.css
.navWrapper {
  display: flex;
  width: 100%;
  justify-content: space-between;
}

.menu {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: space-between;
  display: flex;
  width: 100%;
}

.mainMenu {
  justify-content: flex-start;

  @media (--smallMiddleDown) {
    display: none;
  }
}

.contentMenu {
  justify-content: flex-end;

  @media (--largeDown) {
    display: none;
  }
}

.link {
  display: inline-block;
  white-space: nowrap;
  font: var(--text18-28);
  font-size: 18px;
  line-height: 28px;
  padding: 18px 16px;
  border-bottom: none;
}

.mainLink {
  @media (max-width: 959px) {
    &:last-child {
      border-bottom: none;
    }
  }

  &.active {
    background: white;
  }
}

.closeButton {
  display: none;
  align-self: flex-end;
  margin-bottom: 24px;
  font-size: 0;
  cursor: pointer;
  background-color: transparent;
  border: none;

  & svg {
    width: 24px;
    height: 24px;
  }

  @media (--smallMiddleDown) {
    display: block;
  }
}

.link:hover svg {
  fill: var(--color-primary);
}

.NavIcon {
  width: 24px;
  height: 24px;
}

.loginMenu {
  & a {
    padding: 36px 0;
  }
}

.loginButton {
  @media (--mediumDown) {
    margin-top: 24px;
  }
}

.mobileMenuWrapper {
  @media (--mediumDown) {
    width: 100%;
  }
}

.linkHelp {
  margin-right: 12px;
}

.contentLink {
  color: #82839b;
  @media (max-width: 959px) {
    color: var(--color-text-primary);
  }
}

.helpButton {
  transform: translateZ(0);
  height: 100%;
  font-size: 18px;
  line-height: 28px;
  transition: color 0.2s, background-color 0.2s, padding ease-in 0.5s !important;

  @media (--largeDown) {
    color: var(--color-primary);
    margin-right: 8px;
    display: flex;
    padding-right: 16px;
    background-color: transparent;
    font-size: 16px;
    line-height: 24px;

    &:hover {
      background-color: transparent !important;
    }

    &:active {
      background-color: transparent !important;
    }

    &:focus {
      background-color: transparent !important;
    }
  }
}

.narrowButtonWrap button {
  padding-top: 10px;
  padding-bottom: 10px;
}

.narrowMenu .link {
  padding-top: 10px;
  padding-bottom: 10px;
}

.buttonWrap {
  border: none;
}

